--- a/Projeto_MVC/appsettings.json
+++ b/Projeto_MVC/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CreateAcount;User Id=sa;Password=MinhaSenha123;"
+  }
 }
+
