testando compatibilidade db

--- a/Projeto_MVC/appsettings.json
+++ b/Projeto_MVC/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=CreateAcount;User Id=sa;Password=MinhaSenha123;"
+    "DefaultConnection": "Server=localhost;Database=CreateAcount"
   }
 }
 
